--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,24 +11,86 @@ body {
     font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
 }
 
-.slick-prev:before, .slick-next:before {
+.slick-prev:before,
+.slick-next:before {
     color: #fff !important;
 }
 
-.slick-prev, .slick-next {
+.slick-prev,
+.slick-next {
     color: #fff !important;
+}
+
+.swiper {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+
+    /* Center slide text vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.swiper-button-next, 
+.swiper-rtl .swiper-button-prev {
+    opacity: 0;
+    height: 100% !important;
+    top: var(--swiper-navigation-top-offset, 8%) !important;
+    right: 0 !important;
+    color: #fff !important;
+    background-image: linear-gradient(to left, rgba(0, 0, 0, .6), transparent);
+}
+
+.swiper-button-prev, 
+.swiper-rtl .swiper-button-next {
+    opacity: 0;
+    height: 100% !important;
+    top: var(--swiper-navigation-top-offset, 8%) !important;
+    left: 0 !important;
+    color: #fff !important;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, .6), transparent);
+}
+
+.swiper-button-next:hover, 
+.swiper-rtl .swiper-button-prev:hover,
+.swiper-button-prev:hover, 
+.swiper-rtl .swiper-button-next:hover {
+    opacity: 1;
+    transition: .2s ease-in;
+}
+
+.swiper-button-prev.swiper-button-disabled, 
+.swiper-button-next.swiper-button-disabled {
+    opacity: 0 !important;
+}
+
+.lazy-load-image-background {
+    display: inline !important;
 }
 
 .animate-title {
-    animation: smallsize 1.5s cubic-bezier(.165,.84,.44,1) 5s forwards 1;
+    animation: smallsize 1.5s cubic-bezier(.165, .84, .44, 1) 5s forwards 1;
 }
 
 .animate-overview {
-    animation: hiding 1.5s cubic-bezier(.165,.84,.44,1) 5s forwards 1;
+    animation: hiding 1.5s cubic-bezier(.165, .84, .44, 1) 5s forwards 1;
 }
 
 .animate-loading {
-    animation: loading 2s cubic-bezier(.165,.84,.44,1);
+    animation: loading 2s cubic-bezier(.165, .84, .44, 1);
 }
 
 @keyframes smallsize {
@@ -38,6 +100,7 @@ body {
         transition-duration: 1300ms;
         transition-delay: 5000ms;
     }
+
     100% {
         transform-origin: left bottom;
         transform: scale(0.6) translate3d(0px, 84px, 0px);
@@ -54,6 +117,7 @@ body {
         transition-duration: 1300ms;
         transition-delay: 5000ms;
     }
+
     100% {
         opacity: 0;
         transform-origin: left bottom;
@@ -68,6 +132,7 @@ body {
         opacity: 0;
         background: #000;
     }
+
     100% {
         opacity: 0.7;
         background: transparent;
