--- a/client/src/output.css
+++ b/client/src/output.css
@@ -929,6 +929,14 @@ video {
   background-color: rgb(255 255 255 / 0.9);
 }
 
+.bg-white\/70 {
+  background-color: rgb(255 255 255 / 0.7);
+}
+
+.bg-white\/80 {
+  background-color: rgb(255 255 255 / 0.8);
+}
+
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
