--- a/client/src/output.css
+++ b/client/src/output.css
@@ -1600,6 +1600,11 @@ input:focus-visible {
     padding-right: 1rem;
   }
 
+  .max-\[1024px\]\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
   .max-\[1024px\]\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
