--- a/client/src/App.css
+++ b/client/src/App.css
@@ -50,22 +50,30 @@ input:focus-visible {
 
 .swiper-button-next,
 .swiper-rtl .swiper-button-prev {
-    opacity: 0;
+    opacity: 1;
     height: 100% !important;
     top: var(--swiper-navigation-top-offset, 8%) !important;
     right: 0 !important;
     color: #fff !important;
-    background-image: linear-gradient(to left, rgba(0, 0, 0, .6), transparent);
+    background-image: linear-gradient(to left, rgba(0, 0, 0, .8), transparent);
 }
 
 .swiper-button-prev,
 .swiper-rtl .swiper-button-next {
-    opacity: 0;
+    opacity: 1;
     height: 100% !important;
     top: var(--swiper-navigation-top-offset, 8%) !important;
     left: 0 !important;
     color: #fff !important;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, .6), transparent);
+    background-image: linear-gradient(to right, rgba(0, 0, 0, .8), transparent);
+}
+
+@media only screen and (max-width: 768px) {
+
+    .swiper-button-next::after,
+    .swiper-button-prev::after {
+        font-size: 30px;
+    }
 }
 
 .swiper-button-next:hover,
