--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+    overscroll-behavior: contain;
+}
+
 body {
     background-color: #1a1a1a;
     height: 100%;
